Completed the fileresult.txt

--- a/finder-app/Makefile
+++ b/finder-app/Makefile
@@ -1,24 +1,28 @@
 # Makefile for the writer application
 # Define the compiler based on the CROSS_COMPILE variable.
 # If CROSS_COMPILE is not set, it defaults to the native gcc.
-CC ?= $(CROSS_COMPILE)gcc
+CC := $(CROSS_COMPILE)gcc
 CFLAGS := -Wall -Werror -g
 
-# Define the source file and the resulting executable.
-SRCS = writer.c
-EXEC = writer
+# Target executable
+TARGET := writer
 
-# The default target. It depends on the executable.
-all: $(EXEC)
+# Source files
+SRCS := writer.c
+OBJ := $(SRCS:.c=.o)
 
-#Rule to build the executable from the source file.
-# We use the defined compiler and include necessary libraries (if any).
-$(EXEC): $(SRCS)
-	$(CC) $(SRCS) -o $(EXEC) $(CFLAGS)
+# The default target: build writer
+all: $(TARGET)
+
+$(TARGET): $(OBJ)
+	$(CC) $(CFLAGS) -o $@ $^
+
+%.o: %.c
+	$(CC) $(CFLAGS) -c -o $@ $<
 
 # The clean target to remove built files.
 clean:
-	rm -f $(EXEC) *.o
+	rm -f $(TARGET) $(OBJ)
 
 # Phony targets prevent conflicts with files of the same name.
 .PHONY: all clean
